# anp_demo

./: .gitignore  README.md  pyproject.toml
src/anp_demo/: __init__.py
src/anp_demo/backend/: __init__.py  anp_examples_backend.py  anp_tool.py  config.py  log_base.py  requirements.txt  simple_example.py
src/anp_demo/frontend/js/: main.js
src/anp_demo/static/: index.html
src/use_did_test_public/: did.json  private_keys.json
