[project]
name = "anp_demo"
version = "0.1.0"
description = "A demo project using uv for dependency management"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "python-dotenv==1.0.1",
    "openai==1.78.0",
    "pydantic==2.9.2",
    "aiohttp==3.11.18",
    "pyyaml==6.0.1",
    "agent-connect==0.3.5",
    "cryptography>=43.0.3,<44.0.0",
    "pyjwt==2.10.1",
    "requests==2.32.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anp_demo"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 